[package]
name = "lv_bevy_ecs"
version = "0.7.0"
edition = "2024"
description = "Safe Rust bindings to the LVGL graphics library using Bevy's ECS framework"
readme = "README.md"
homepage = "https://github.com/SakiiCode/lv_bevy_ecs"
repository = "https://github.com/SakiiCode/lv_bevy_ecs"
license = "MIT"
keywords = ["bevy", "ecs", "embedded", "graphics", "lvgl"]
categories = ["embedded", "graphics", "gui", "no-std"]

[package.metadata.docs.rs]
features = ["use-vendored-config"]

[lib]
name = "lv_bevy_ecs"
path = "src/lib.rs"

[[example]]
name = "no_ecs"
required-features = ["no_ecs"]

[dependencies]
bevy_ecs = { version = "0.18.0", default-features = false }
constptr = { version = "0.3.1", default-features = false }
ctor = { version = "0.6.0", optional = true }
embedded-graphics = { version = "0.8.0" }
lightvgl-sys = { path = "../lightvgl-sys", version = "~9.4.0", default-features = false, features = [
  "library",
] }
log = { version = "0.4" }

[dev-dependencies]
embedded-graphics-simulator = "0.8.0"
simple_logger = "5.1.0"

[build-dependencies]
lightvgl-sys = { path = "../lightvgl-sys", version = "~9.4.0", default-features = false, features = [
  "raw-bindings",
] }
lv_codegen = { path = "lv_codegen", version = "0.3.0" }
proc-macro2 = "1.0.95"
quote = "1.0.40"
which = "8.0.0"

[features]
default = ["ctor"]
ctor = ["dep:ctor"]  # Automatically call lv_init() at startup
lvgl_alloc = []
no_ecs = ["lv_codegen/no_ecs"]
use-vendored-config = ["lightvgl-sys/use-vendored-config"]
