[package]
name = "lv_bevy_ecs"
version = "0.10.0-alpha.0"
edition = "2024"
description = "Safe Rust bindings to the LVGL graphics library using Bevy's ECS framework"
readme = "README.md"
homepage = "https://github.com/SakiiCode/lv_bevy_ecs"
repository = "https://github.com/SakiiCode/lv_bevy_ecs"
license = "MIT"
keywords = ["bevy", "ecs", "embedded", "graphics", "lvgl"]
categories = ["embedded", "graphics", "gui", "no-std"]

[package.metadata.docs.rs]
features = ["use-vendored-config"]

[lib]
name = "lv_bevy_ecs"
path = "src/lib.rs"

[[example]]
name = "no_ecs"
required-features = ["no_ecs"]

[[example]]
name = "defmt"
required-features = ["defmt"]

[[example]]
name = "widgets_demo"
required-features = ["demos"]

[dependencies]
bevy_ecs = { version = "0.18.0", default-features = false }
cfg-if = "1.0.4"
constptr = { version = "0.3.1", default-features = false }
ctor = { version = "0.8.0", default-features = false, features = ["proc_macro"], optional = true }
defmt = { version = "1.0.1", optional = true }
embedded-graphics = { version = "0.8.0" }
lightvgl-sys = { path = "../lightvgl-sys", version = "9.5.3-beta", default-features = false, features = [
  "library",
] }
log = { version = "0.4" }
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
defmt-stdout = "0.1.2"
embedded-graphics-simulator = "0.8.0"
memory-stats = "1.2.0"
simple_logger = "5.1.0"

[build-dependencies]
lightvgl-sys = { path = "../lightvgl-sys", version = "9.5.3-beta", default-features = false, features = [
  "raw-bindings",
] }
lv_codegen = { path = "lv_codegen", version = "0.4.0" }
prettyplease = "0.2.37"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.111", default-features = false, features = ["parsing"] }
which = "8.0.0"

[features]
# Use critical-section instead of spin
critical-section = ["bevy_ecs/critical-section"]
# Automatically call lv_init() at startup
ctor = ["dep:ctor"]
# Use defmt instead of log
defmt = ["dep:defmt"]
# Include LVGL demos (requires LV_BUILD_DEMOS)
demos = ["lightvgl-sys/demos"]
# Set LVGL allocator as Rust global allocator
lvgl-alloc = ["defmt?/alloc"]
# Enable functions that should not be used in the ECS environment
no_ecs = ["lv_codegen/no_ecs"]
# Use Rust allocator as LVGL allocator (requires LV_USE_STDLIB_MALLOC = CUSTOM)
rust-alloc = ["defmt?/alloc"]
# Enable serde support
serde = ["bevy_ecs/serialize"]
# Needed for the docs-rs generator
use-vendored-config = ["lightvgl-sys/use-vendored-config"]

[profile.dev]
opt-level = "z"
lto = "fat"
codegen-units = 1
