[package]
name = "lv_codegen"
version = "0.4.2"
edition = "2024"
description = "Code generation companion to lightvgl-sys"
license = "MIT"

[dependencies]
Inflector = "0.11.4"
constptr = "0.3.1"
itertools = "0.14.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex = "1.11.1"
syn = { version = "2.0.111", features = ["full"] }
thiserror = "2.0.17"

[features]
no_ecs = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

allow_attributes_without_reason = "allow"
arbitrary_source_item_ordering = "allow"
blanket_clippy_restriction_lints = "allow"
expect_used = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
missing_assert_message = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_inline_in_public_items = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
panic_in_result_fn = "allow"
pattern_type_mismatch = "allow"
question_mark_used = "allow"
single_call_fn = "allow"
std_instead_of_core = "allow"
too_many_lines = "allow"
unused_trait_names = "allow"
unwrap_in_result = "allow"
unwrap_used = "allow"
